Simplify export and add labels

--- a/exports.html
+++ b/exports.html
@@ -121,8 +121,8 @@
             </select>
           </div>
           <div class="actions">
-            <button class="btn primary" id="exportCsv">Generate CSV (Scope 2 electricity, tCO₂e — location-based + market-based)</button>
-            <button class="btn secondary" id="exportPdf" disabled title="PDF summary coming soon">Generate PDF (Scope 2 electricity, tCO₂e)</button>
+            <button class="btn primary" id="exportCsv">Generate CSV</button>
+            <button class="btn secondary" id="exportPdf" disabled title="PDF summary coming soon">Generate PDF</button>
             <span class="status" id="exportStatus"></span>
           </div>
           <p class="note">Calculated using location-based Scope 2 electricity factors (tCO₂e); market-based uses RECs/PPAs where provided. <a href="methodology.html">See Methodology</a>.</p>
