Simplify records and export headers

--- a/exports.html
+++ b/exports.html
@@ -103,7 +103,7 @@
       <header>
         <div class="shell">
           <div class="top-row"></div>
-          <h1>Export / Reports (Scope 2 electricity, tCO₂e — location-based + market-based)</h1>
+          <h1>Export / Reports</h1>
           <p class="muted">Generate CSV exports for Scope 2 electricity emissions (tCO₂e, location-based + market-based). Built for handoff to finance and audit teams.</p>
         </div>
       </header>
