--- a/records.html
+++ b/records.html
@@ -344,14 +344,14 @@
       <header>
         <div class="shell">
           <div class="top-row"></div>
-          <h1>My Records (Scope 2 electricity, tCO₂e — location-based + market-based)</h1>
-          <p class="subhead">Your saved Scope 2 electricity emissions (tCO₂e, location-based + market-based).</p>
+          <h1>My Records</h1>
+          <p class="subhead">Your saved Scope 2 electricity emissions.</p>
         </div>
       </header>
 
       <div class="shell">
     <section class="carbon-summary">
-      <h2 style="margin:0;">Carbon Snapshot (YTD, Scope 2 electricity, tCO₂e — location-based)</h2>
+      <h2 style="margin:0;">Carbon Snapshot</h2>
       <div class="summary-grid">
         <div class="summary-card">
           <div class="label">Total Scope 2 electricity (tCO₂e, location-based)</div>
@@ -392,7 +392,7 @@
     </section>
         <section>
           <div class="records-controls">
-            <h2 style="margin:0;">Saved Scope 2 electricity records (tCO₂e — location-based + market-based)</h2>
+            <h2 style="margin:0;">Saved Scope 2 electricity records</h2>
             <div class="records-actions">
               <!-- Export respects the current filters to avoid mismatched downloads -->
               <button class="btn secondary" id="records-export-csv" type="button">Export CSV</button>
@@ -402,7 +402,7 @@
           <div class="note">Calculated using location-based Scope 2 electricity factors (tCO₂e); market-based uses RECs/PPAs where provided. <a href="methodology.html">See Methodology</a>.</div>
           <section class="records-filters">
             <label>
-              Reporting year (Scope 2 electricity)
+              Reporting year
           <select id="filterYear">
             <option value="">All</option>
           </select>
@@ -438,8 +438,8 @@
       <table class="table" aria-label="Saved records">
         <thead>
           <tr>
-            <th>Emissions (tCO₂e, location-based Scope 2 electricity)</th>
-            <th>Method (Scope 2 electricity, tCO₂e)</th>
+            <th>Emissions</th>
+            <th>Method</th>
             <th>Actions</th>
           </tr>
         </thead>
