Simplify scope wording for minimal UI

--- a/exports.html
+++ b/exports.html
@@ -104,7 +104,7 @@
         <div class="shell">
           <div class="top-row"></div>
           <h1>Export / Reports</h1>
-          <p class="muted">Generate CSV exports for Scope 2 electricity emissions (tCO₂e, location-based + market-based). Built for handoff to finance and audit teams.</p>
+          <p class="muted">Generate CSV exports for your emissions. Built for handoff to finance and audit teams.</p>
         </div>
       </header>
 
@@ -115,7 +115,7 @@
             <div id="companyName" class="muted">Loading…</div>
           </div>
           <div>
-            <label for="exportYear">Reporting year (Scope 2 electricity)</label>
+            <label for="exportYear">Reporting year</label>
             <select id="exportYear">
               <option value="">All years</option>
             </select>
