--- a/index.html
+++ b/index.html
@@ -356,10 +356,10 @@
         <button class="btn secondary" id="header-signin">Log in</button>
         <button class="btn secondary" id="header-signout" style="display:none;">Log out</button>
       </div>
-      <h1>Scope 2 electricity reporting for small teams (location-based, tCO₂e) — without the complexity</h1>
-      <p class="subhead">Calculate Scope 2 electricity emissions (tCO₂e, location-based default) in minutes.</p>
+      <h1>Carbon reporting for small teams - without the complexity</h1>
+      <p class="subhead">Calculate Scope 2 electricity emissions in minutes.</p>
       <div class="cta-row">
-        <a class="btn primary" href="#calculator">Start Scope 2 electricity calculation (location-based, tCO₂e)</a>
+        <a class="btn primary" href="#calculator">Start Scope 2 electricity calculation</a>
       </div>
     </div>
   </header>
@@ -378,13 +378,13 @@
         </div>
         <div>
           <strong>3) You get a clear estimate</strong>
-          <p class="muted">Location-based Scope 2 by default, with optional market-based adjustments if you opt in.</p>
+          <p class="muted">Location-based by default, with optional market-based adjustments if you opt in.</p>
         </div>
       </div>
     </section>
 
     <section id="calculator">
-      <h2>Calculate your monthly Scope 2 electricity emissions (tCO₂e, location-based default)</h2>
+      <h2>Calculate your monthly Scope 2 electricity emissions</h2>
       <p class="muted" style="margin-bottom:8px;">Start by telling us who you are so we can speak your language.</p>
       <form id="carbon-form" class="stack">
         <div class="two-col">
@@ -445,10 +445,10 @@
           </div>
         </div>
         <div class="notice">
-          No portals, no jargon - just a clear Scope 2 electricity estimate (tCO₂e). No uploads. Calculate without an account; sign in only to save or export. Uses public EPA/DEFRA factors. Informational, not a filing.
+          No portals, no jargon - just a clear estimate. No uploads. Calculate without an account; sign in only to save or export. Uses public EPA/DEFRA factors. Informational, not a filing.
         </div>
         <div class="cta-row" style="justify-content:flex-start;">
-          <button type="submit" class="btn primary">See my Scope 2 electricity emissions (tCO₂e, location-based default)</button>
+          <button type="submit" class="btn primary">See my Scope 2 electricity emissions</button>
         </div>
         <div class="notice" style="margin-top:10px;">
           <label style="display:flex;align-items:center;gap:8px;font-weight:600;">
@@ -492,10 +492,10 @@
     </section>
 
     <section id="results">
-      <h2>Your Scope 2 electricity estimate (tCO₂e — location-based default, market-based where provided)</h2>
+      <h2>Your Scope 2 electricity estimate</h2>
       <!-- Pre-calculated example builds trust before interaction -->
       <div class="example">
-        <strong>Example:</strong> 1,850 kWh → 1.42 tCO₂e (location-based) ≈ driving ~3,500 miles. For intuition only (non-reporting metric).
+        <strong>Example:</strong> 1,850 kWh → 1.42 tCO₂e ≈ driving ~3,500 miles. For intuition only (non-reporting metric).
       </div>
       <div id="result-container" class="result">
         <div class="grid-3">
@@ -531,7 +531,7 @@
           California SB-253 / SB-261 and EU CSRD apply to certain larger companies or those operating in those regions. Many small businesses are not required to report yet. This is high-level guidance only — not legal or audit advice.
         </div>
         <div class="cta-row" style="margin-top:12px; justify-content:flex-start;">
-          <button type="button" class="btn primary" id="save-btn">Save Scope 2 electricity record (tCO₂e, location-based + market-based)</button>
+          <button type="button" class="btn primary" id="save-btn">Save record</button>
           <button type="button" class="btn secondary" id="signout-btn" style="display:none;">Log out</button>
         </div>
       </div>
@@ -562,7 +562,7 @@
           <p class="muted">Currently focused on Scope 2 electricity emissions. Scope 1 support planned.</p>
         </div>
         <div>
-          <strong>Exportable Scope 2 electricity summaries (tCO₂e, location-based + market-based)</strong>
+          <strong>Exportable summaries</strong>
           <p class="muted">Share clean, audit-friendly summaries with stakeholders.</p>
         </div>
       </div>
