--- a/insights.html
+++ b/insights.html
@@ -114,8 +114,8 @@
       <header>
         <div class="shell">
           <div class="top-row"></div>
-          <h1>Insights (Scope 2 electricity, tCO₂e — location-based)</h1>
-          <p class="muted">Monthly trends and regional contributors based on saved Scope 2 electricity records (tCO₂e, location-based).</p>
+          <h1>Insights</h1>
+          <p class="muted">Monthly trends and regional contributors based on saved records.</p>
         </div>
       </header>
 
@@ -123,7 +123,7 @@
         <section class="card">
           <div class="filters">
             <div>
-              <label for="insightYear">Reporting year (Scope 2 electricity)</label>
+              <label for="insightYear">Reporting year</label>
               <select id="insightYear">
                 <option value="">All years</option>
               </select>
@@ -133,7 +133,7 @@
         </section>
 
         <section class="card stack">
-          <h3 style="margin:0;">Monthly Scope 2 electricity trend (tCO₂e, location-based)</h3>
+          <h3 style="margin:0;">Monthly trend</h3>
           <p class="subtitle">Location-based Scope 2 (tCO₂e) • Saved records only • Estimates</p>
           <div class="chart-wrap">
             <div class="metric" id="trendTotal">—<span class="unit">tCO₂e</span></div>
@@ -151,7 +151,7 @@
         </section>
 
         <section class="card stack">
-          <h3 style="margin:0;">Regional contribution (Scope 2 electricity, location-based, tCO₂e)</h3>
+          <h3 style="margin:0;">Regional contribution</h3>
           <p class="subtitle">Location-based Scope 2 (tCO₂e) • Saved records only • Estimates</p>
           <div class="ranked-list" id="regionList"></div>
           <div class="empty" id="regionEmpty" style="display:none;">No electricity records found for this period. Add a record to include it in calculations and exports.</div>
@@ -159,7 +159,7 @@
         </section>
 
         <section class="card stack">
-          <h3 style="margin:0;">Data coverage (Scope 2 electricity records, months)</h3>
+          <h3 style="margin:0;">Data coverage</h3>
           <p class="subtitle">Months with saved records • Location-based Scope 2 • Estimates</p>
           <div class="metric" id="coverageCount">—</div>
           <div class="subtitle" id="coverageNote">Coverage based on saved records only</div>
