--- a/methodology.html
+++ b/methodology.html
@@ -28,7 +28,7 @@
 <body>
   <div class="shell">
     <header class="card">
-      <h1>Methodology & Disclosures (Scope 2 electricity, tCO₂e — location-based + market-based)</h1>
+      <h1>Methodology & Disclosures</h1>
       <p class="muted">How CarbonWise calculates Scope 2 electricity emissions (tCO₂e), including optional user-declared market-based adjustments.</p>
     </header>
 
