--- a/settings.html
+++ b/settings.html
@@ -104,8 +104,8 @@
       <header>
         <div class="shell">
           <div class="top-row"></div>
-          <h1>Settings (Scope 2 electricity, tCO₂e — location-based + market-based)</h1>
-          <p class="muted">Update the company information used in Scope 2 electricity records and exports (tCO₂e).</p>
+          <h1>Settings</h1>
+          <p class="muted">Update the company information used in records and exports.</p>
         </div>
       </header>
 
@@ -127,14 +127,14 @@
               </div>
             </div>
             <div>
-              <label for="company-reporting-year">Reporting year preference (Scope 2 electricity)</label>
+              <label for="company-reporting-year">Reporting year preference</label>
               <select id="company-reporting-year">
                 <option value="all">All years</option>
                 <option value="current">Current year</option>
                 <option value="previous">Previous year</option>
               </select>
             </div>
-            <p class="note">These preferences set defaults for Scope 2 electricity reporting views.</p>
+            <p class="note">These preferences set defaults for reporting views.</p>
             <div class="actions">
               <button class="btn primary" type="submit">Save changes</button>
               <span class="status" id="settings-status"></span>
