--- a/methodology.html
+++ b/methodology.html
@@ -29,13 +29,28 @@
   <div class="shell">
     <header class="card">
       <h1>Methodology & Disclosures</h1>
-      <p class="muted">How CarbonWise calculates Scope 2 electricity emissions (tCO₂e), including optional user-declared market-based adjustments.</p>
+      <p class="muted">How CarbonWise calculates Scope 2 electricity emissions (tCO₂e), including optional user-declared market-based adjustments and early access Scope 1 estimates.</p>
     </header>
 
     <!-- Scope coverage clarity -->
     <section>
       <h2>1. Scope Covered</h2>
       <p>CarbonWise supports Scope 2 greenhouse gas emissions from purchased electricity. Scope 2 calculations use the location-based method by default, and optional market-based adjustments may be applied when users provide information. Additional scopes or market-based capabilities may be added in the future.</p>
+    </section>
+
+    <section id="scope-1">
+      <h2>Scope 1 (Stationary combustion — Natural gas)</h2>
+      <p>CarbonWise provides an early access, opt-in Scope 1 estimate for stationary combustion of natural gas at owned or controlled facilities. This module is designed for small teams starting basic reporting.</p>
+      <p><strong>What is included</strong></p>
+      <p class="muted">Stationary combustion only, natural gas, owned/controlled facilities, and heating/boilers/furnaces/generators with regular metered usage.</p>
+      <p><strong>What is excluded</strong></p>
+      <p class="muted">Mobile combustion, fugitive emissions, process emissions, backup generators with irregular usage (unless metered), personal fuel use, and shared buildings without clear allocation.</p>
+      <p><strong>Data assumptions</strong></p>
+      <p class="muted">Estimates rely on the monthly fuel quantity and facility location you provide. No bill uploads or device-level data are required.</p>
+      <p><strong>Estimation limitations</strong></p>
+      <p class="muted">Results are partial and may omit other Scope 1 sources. Factors are simplified and are not a full inventory or verification.</p>
+      <p><strong>Difference from Scope 2</strong></p>
+      <p class="muted">Scope 1 covers direct fuel combustion at owned or controlled facilities, while Scope 2 covers indirect emissions from purchased electricity. They are reported separately.</p>
     </section>
 
     <!-- Plain-language inputs and formula -->
