chore: align Scope 2 export card with Scope 1 template

--- a/exports.html
+++ b/exports.html
@@ -111,6 +111,10 @@
       <div class="shell">
         <section class="card stack">
           <div>
+            <h2 style="margin:0 0 6px;">Scope 2 (Purchased electricity)</h2>
+            <p class="muted">Export location-based and optional market-based Scope 2 electricity results.</p>
+          </div>
+          <div>
             <label>Company</label>
             <div id="companyName" class="muted">Loading…</div>
           </div>
@@ -121,7 +125,7 @@
             </select>
           </div>
           <div class="actions">
-            <button class="btn primary" id="exportCsv">Generate CSV</button>
+            <button class="btn primary" id="exportCsv">Generate Scope 2 CSV</button>
             <button class="btn secondary" id="exportPdf" disabled title="PDF summary coming soon">Generate PDF</button>
             <span class="status" id="exportStatus"></span>
           </div>
