chore: move company header to exports page top

--- a/exports.html
+++ b/exports.html
@@ -109,14 +109,17 @@
       </header>
 
       <div class="shell">
+        <section class="card stack" style="margin-bottom:14px;">
+          <div>
+            <label>Company</label>
+            <div id="companyName" class="muted">Loading…</div>
+          </div>
+        </section>
+
         <section class="card stack">
           <div>
             <h2 style="margin:0 0 6px;">Scope 2 (Purchased electricity)</h2>
             <p class="muted">Export location-based and optional market-based Scope 2 electricity results.</p>
-          </div>
-          <div>
-            <label>Company</label>
-            <div id="companyName" class="muted">Loading…</div>
           </div>
           <div>
             <label for="exportYear">Reporting year</label>
